# web/public/openapi.json
@@ -4809,8 +4809,20 @@
               }
             ]
           },
-          "livestreams": {
-            "type": "boolean"
+          "fields": {
+            "maxItems": 6,
+            "type": "array",
+            "items": {
+              "type": "string",
+              "enum": [
+                "room",
+                "track",
+                "speakers",
+                "format",
+                "tags",
+                "livestreams"
+              ]
+            }
           },
           "digestMin": {
             "type": "integer",
